--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mariadb": "^3.2.1",
     "mounter": "^0.1.1",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.6.1",
     "sequelize": "^6.33.0"
   }
 }
